# anubias

./: .gitignore  README.md  Yolodolo  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts  vue.config.js  yolo
.github/: FUNDING.yml
anubias2/: CHANGELOG.md  index.html  package.json
anubias2/electron/main/: app-menu.ts  config.ts  ide.ts  index.ts  main-api.ts
anubias2/public/: anubias.desktop
anubias2/src/: Anubias.vue  app.vue  css.ts  main.ts  store.ts  style.css
anubias2/src/ide/: ide-api.ts  router.ts
anubias2/src/samples/: node-api.ts
electron/main/: app-menu.ts  ide.ts  main-api.ts
electron/preload/: index.ts
public/: index.html
raw/: README.md  pubspec.yaml
raw/lib/: main.dart  main_backup.dart
raw/linux/: CMakeLists.txt  my_application.cc
raw/test/: widget_test.dart
raw/web/: index.html  manifest.json
raw/windows/: CMakeLists.txt
resources/: anubias-engine
resources/anubias_sample/: README.md  flutter_launcher_icons.yaml  pubspec_.yaml
resources/icons/: icon.icns
src/: App.vue  app.vue  background.js  css.ts  main.js  main.ts  preload.js  router.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: config.rs  file.rs  format.rs  global_shortcut.rs  lib.rs  main.rs  menu_state.rs  message.rs  mod.rs
src-tauri/src/menu/: menu_actions.rs  menu_events.rs  menu_state.rs  mod.rs
src/components/: HelloWorld.vue
src/ide/: ide-api.ts  router.js  test.js
src/ide/css/: style.css
src/stores/: ideStore.js  projectStore.js  store.js
(+240 files in other folders)
